// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hcm-compliances - createCompliancePolicyLink should return valid compliance policy link 1`] = `"-"`;

exports[`hcm-compliances - createPolicyLink should return valid policy link 1`] = `
<Link
  replace={false}
  to="undefined/policies/undefined/undefined/compliancePolicy/undefined"
/>
`;

exports[`hcm-compliances - getStatus should return compliant status 1`] = `
<StatusField
  status="ok"
  text="compliant"
/>
`;

exports[`hcm-compliances - getStatusIcon should return compliant status 1`] = `
<StatusField
  status="ok"
  text="compliant"
/>
`;

exports[`hcm-compliances - getStatusIcon should return noncompliant status 1`] = `
<StatusField
  status="critical"
  text="not compliant"
/>
`;

exports[`hcm-compliances - getStatusIconForPolicy should return compliant status 1`] = `
<div
  className="compliance-table-status"
>
  <Icon
    className="table-status__compliant"
    description=""
    fillRule="evenodd"
    name="icon--checkmark--glyph"
    role="img"
  />
</div>
`;

exports[`hcm-compliances - getStatusIconForPolicy should return noncompliant status 1`] = `
<div
  className="compliance-table-status"
>
  <Icon
    className="table-status__not_compliant"
    description=""
    fillRule="evenodd"
    name="icon--error--glyph"
    role="img"
  />
</div>
`;
